--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.111.0"
+uvicorn = {extras = ["standart"], version = "^0.30.1"}
+pydantic = {extras = ["email"], version = "^2.7.4"}
+pydantic-settings = "^2.3.4"
