--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,4 @@ fastapi = "^0.111.0"
 uvicorn = {extras = ["standart"], version = "^0.30.1"}
 pydantic = {extras = ["email"], version = "^2.7.4"}
 pydantic-settings = "^2.3.4"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
