--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,4 @@ uvicorn = {extras = ["standart"], version = "^0.30.1"}
 pydantic = {extras = ["email"], version = "^2.7.4"}
 pydantic-settings = "^2.3.4"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
+asyncpg = "^0.29.0"
